# DjangoMongoSRL

./: .gitignore  LICENSE  README.md  Readme.md  monkey_patch.py  pyproject.toml
apps/cards/: admin.py  models.py  urls.py  views.py
apps/cards/migrations/: 0001_initial 2.py
apps/decks/: admin.py  models.py  urls.py  views.py
apps/decks/migrations/: 0001_initial.py
config/: __init__.py  settings.py  urls.py
